tried to fix spacing

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,3 +1,8 @@
+
+
+
+
+
 @media screen and (max-width: 1400px) {
     #profile {
       height: 83vh;
@@ -12,13 +17,8 @@
     }
   }
 
-  @media screen and (max-width: 1920px) {
 
-  }
-  
-  
-  
- 
+
 
   
 
